--- a/ThisSlaps.csproj
+++ b/ThisSlaps.csproj
@@ -23,6 +23,10 @@
     <Version>0.1.0</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BepInEx.Analyzers" Version="1.0.8" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.4.21" />
@@ -32,7 +36,7 @@
     <PackageReference Include="Silksong.GameLibs" Version="1.1.0-silksong1.0.28561"/>
   </ItemGroup>
 
-  <Target Name="CopyMod" AfterTargets="PostBuildEvent" Condition="'$(SilksongFolder)' != ''">
+  <Target Name="CopyMod" AfterTargets="PostBuildEvent" Condition="'$(SilksongFolder)' != '' And '$(Configuration)' == 'Debug'">
       <ItemGroup>
           <Binaries Include="$(TargetPath)"/>
           <Binaries Include="$(TargetDir)/$(TargetName).pdb"/>
@@ -40,14 +44,21 @@
 
        <Copy SourceFiles="@(Binaries)" DestinationFolder="$(SilksongFolder)/BepInEx/plugins/$(TargetName)" /> 
 <!--      <Copy SourceFiles="@(Binaries)" DestinationFolder="$(SilksongFolder)/BepInEx/scripts" />-->
-
-      <PropertyGroup>
-          <ExportFolder>bin/Publish</ExportFolder>
-      </PropertyGroup>
-      
-      <RemoveDir Directories="$(IntermediateOutputPath)/archive"/>
-      <MakeDir Directories="$(ExportFolder)"/>
-      <Copy SourceFiles="@(Binaries)" DestinationFolder="$(IntermediateOutputPath)/archive"/>
-      <ZipDirectory SourceDirectory="$(IntermediateOutputPath)/archive" DestinationFile="$(ExportFolder)/$(TargetName).zip" Overwrite="True"/>
   </Target>
+    
+    <Target Name="ReleaseArchive" AfterTargets="PostBuildEvent" Condition="'$(Configuration)' == 'Release'">
+        <ItemGroup>
+            <Binaries Include="$(TargetPath)"/>
+        </ItemGroup>
+        
+        <PropertyGroup>
+            <ExportFolder>bin/Publish</ExportFolder>
+            <PluginsDir>BepInEx/plugins</PluginsDir>
+        </PropertyGroup>
+
+        <RemoveDir Directories="$(IntermediateOutputPath)/archive"/>
+        <MakeDir Directories="$(ExportFolder)"/>
+        <Copy SourceFiles="@(Binaries)" DestinationFolder="$(IntermediateOutputPath)/archive/$(PluginsDir)/$(TargetName)"/>
+        <ZipDirectory SourceDirectory="$(IntermediateOutputPath)/archive" DestinationFile="$(ExportFolder)/$(TargetName).zip" Overwrite="True"/>
+    </Target>
 </Project>
